--- a/assign2/myCV.html
+++ b/assign2/myCV.html
@@ -2,13 +2,34 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link href="../css.css" >
-<title></title>
+<link rel="stylesheet" type="text/css" href="css.css" >
+<link rel="stylesheet" type="text/css" href="grid_css/960_12_col.css">
+<title>Radian Smile</title>
 </head>
 
 <body>
+<div class="container_12" >
+<header>
+</header>
+
+<div id="banner" class="grid_12"> 
+<h1> Radian Smile </h1>
+<div id="hd_photo"><img src="image/hd_photo.jpg" width="150" height="150" alt="my big head"></div>
+    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+</div>
+
+<nav id="bookmarks" class="grid_12">Photo | About | Interest | Activities| Love Camp </nav>
 
 
+<div id="education" >
+  <div class="edu grid_3"><p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p></div>
+  <div class="edu grid_3"><p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p></div>
+  <div class="edu grid_3"><p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p></div>
+  <div class="edu grid_3"><p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p></div>
+</div>
 
+<footer>
+</footer>
+</div>
 </body>
 </html>
