--- a/assign2/myCV.html
+++ b/assign2/myCV.html
@@ -39,7 +39,8 @@
 </div>
 
 
-<div id="activity_tag" class="grid_2 tag"><h1>Interests</h1></div>
+<div id="activity_tag" class="grid_2 tag">
+  <h1>Activities</h1></div>
 <div id="activities" class="grid_12 classBox" >
   <div class="act"><p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p></div>
   <div class="act"><p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p></div>
