--- a/assign2/myCV.html
+++ b/assign2/myCV.html
@@ -14,9 +14,9 @@
 
 <div id="banner" class="grid_12"> 
 
-<div id="hd_photo"><img src="image/hd_photo.jpg" width="150" height="150" alt="my big head"></div>
+<div id="hd_photo"><img src="image/hd_photo.jpg" width="200" height="200" alt="my big head"></div>
 	<h1> Radian Smile <nav id="bookmarks">Photo | About | Interest | Activities| Love Camp </nav> </h1>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+    <p>老師好像是說要有意點自我介紹，因此就將就點說明一下我這個網頁的內容好了，在接下來的幾個標籤裡你會看到的分別是我的相關科系，高中啊、我的興趣呀(在這裡算是老師要求的專長，但我必須強調，興趣不等於專長)，再來就是我參加的一些活動啦。由於會的東西還不多加上才疏學淺，就將就暫時用這個網站當作我的Profile吧，感謝大家撥空指教，呵呵。</p>
 </div>
 
 
@@ -24,30 +24,84 @@
 
 <div id="edu_tag" class="grid_2 tag"><h1>Education</h1> </div>
 <div id="education" class="grid_12 classBox" >
-  <div class="edu"><p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p></div>
-  <div class="edu"><p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p></div>
-  <div class="edu"><p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p></div>
-  <div class="edu"><p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p></div>
+  <div class="edu">
+    <div class="inBox">
+      <img src="image/edu.jpg" width="100%" alt="Edu">
+	<h2>Education</h2>
+	<p>This is my major. Education dpartment is very energetic. At here, I am learning how we were educated and how we should teach others.</p>
+    </div></div>
+  <div class="edu">
+    <div class="inBox">
+      <img src="image/dct.jpg" width="100%" alt="dct">
+      <h2>Digital Content</h2>
+      <p>This is my double major. Digital content is very interesting. And I am enjoyed being studying here. At here, I learn many thing i've never known before.</p>
+    </div></div>
+  <div class="edu">
+    <div class="inBox">
+    <img src="image/0.jpg" width="100%"  alt="eco">
+      <h2>Economies</h2>
+      <p>Economy is an interesting science. Here, the professors teach us how to make choice in the econemies and even in our daliy life.</p>
+    </div></div>
+  <div class="edu">
+    <div class="inBox">
+    <img src="image/school.jpg" width="100%" alt="HSNU">
+<h2>HSNU</h2>
+<p>This is my senior high school. HSNU is the symbol of youth. This is the most freedom and creatice school I've ever seen.</p>
+    </div></div>
 </div>
 
 <div id="interest_tag" class="grid_2 tag"><h1>Interests</h1></div>
 <div id="interests" class="grid_12 classBox" >
-  <div class="init"><p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p></div>
-  <div class="init"><p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p></div>
-  <div class="init"><p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p></div>
-  <div class="init"><p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p></div>
+  <div class="init">
+    <div class="inBox">
+      <div class="img">
+        <img src="image/biking.jpg" height="100px" alt="biking">
+      </div>
+      dsf gdsff ffa sdfas dfdsf<br>
+      asdfasdfsd fasdf asdfa asfsd<br>
+      asd fsad fdas sdfasd asdf<br>
+      asdfasdf das ad adfsfd<br>
+      asdfsadfsdafdasf sahdklfh aslkfh alfksjd
+    </div>
+  </div>
+  <div class="init">
+    <div class="inBox">
+      <div class="img"><img src="image/tb.jpg" width="132" alt="tt"></div>
+      dsf gdsff ffa sdfas dfdsf<br>
+asdfasdfsd fasdf asdfa asfsd<br>
+asd fsad fdas sdfasd asdf<br>
+asdfasdf das ad adfsfd<br>
+asdfsadfsdafdasf sahdklfh aslkfh alfksjd    </div></div>
+  <div class="init">
+    <div>
+      <div class="inBox">
+        <div class="img"><img src="image/flash.jpg" height="100px" alt="flash"></div>
+        dsf gdsff ffa sdfas dfdsf<br>
+asdfasdfsd fasdf asdfa asfsd<br>
+asd fsad fdas sdfasd asdf<br>
+asdfasdf das ad adfsfd<br>
+asdfsadfsdafdasf sahdklfh aslkfh alfksjd      </div>
+    </div></div>
+  <div class="init">
+    <div class="inBox">
+      <div class="img"><img src="image/dreamweaver.jpg" height="100px" alt="Dw"></div>
+      dsf gdsff ffa sdfas dfdsf<br>
+asdfasdfsd fasdf asdfa asfsd<br>
+asd fsad fdas sdfasd asdf<br>
+asdfasdf das ad adfsfd<br>
+asdfsadfsdafdasf sahdklfh aslkfh alfksjd    </div></div>
 </div>
 
 
 <div id="activity_tag" class="grid_2 tag">
   <h1>Activities</h1></div>
 <div id="activities" class="grid_12 classBox" >
-  <div class="act"><p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p></div>
-  <div class="act"><p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p></div>
-  <div class="act"><p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p></div>
-  <div class="act"><p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p></div>
-  <div class="act"><p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p></div>
-  <div class="act"><p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p></div>
+  <div class="act"><div></div></div>
+  <div class="act"><div></div></div>
+  <div class="act"><div></div></div>
+  <div class="act"><div></div></div>
+  <div class="act"><div></div></div>
+  <div class="act"><div></div></div>
   
 </div>
 
