--- a/assign2/myCV - 複製.html
+++ b/assign2/myCV - 複製.html
@@ -14,23 +14,15 @@
 
 <div id="banner" class="grid_12"> 
 
-<div id="hd_photo"><img src="image/hd_photo.jpg" width="199" height="199" alt="my big head"></div>
+<div id="hd_photo"><img src="image/hd_photo.jpg" width="200" height="200" alt="my big head"></div>
 	<h1> Radian Smile <nav id="bookmarks">Photo | About | Interest | Activities| Love Camp </nav> </h1>
    	<dl>
     <dt>E-mail Address</dt><dd>craziestdavid@gmail.com</dd>
     <dt>Part Time Work</dt><dd>Nccu Computer Center Assistant</dd>
-    <dt>Major Subject</dt><dd>Education</dd>
-    <dt>Interests</dt><dd>Photography, Computers.</dd><br>
-    <dt>Git Hub</dt><dd>radiansmile.github.com</dd>
+    <dt>Major</dt><dd></dd>
+    <dt></dt><dd></dd>
+    <dt></dt><dd></dd>
     </dl>
-    <div id="cnt">
-     <ul>
-     <a href="http://www.facebook.com/D.craziest"><li class="fb"></li></a>
-     <li class="gp"></li>
-     <li class="ti"></li>
-     <li class="tm"></li>
-     </ul>
-      </div>
 </div>
 
 
@@ -60,7 +52,7 @@
     <div class="inBox">
     <img src="image/school.jpg" width="100%" alt="HSNU">
 <h2>HSNU</h2>
-<p>This is my senior high school. HSNU is the symbol of youth. This is the most freedom and creatice school I've ever seen. I had so much fun here.</p>
+<p>This is my senior high school. HSNU is the symbol of youth. This is the most freedom and creatice school I've ever seen.</p>
     </div></div>
 </div>
 
@@ -71,7 +63,7 @@
       <div class="img">
         <img src="image/biking.jpg" height="100px" alt="biking">
       </div>
-      <h1>VoleyBall</h1>
+      <p>VoleyBall</p>
       <ul>
         <li>I love ths feeling of team work in the ball game. And rather than basketball, voleyball is more peaceful&nbsp;and skillful. So I enjoy playing the air in&nbsp;the voleyball game.</li>
       </ul>
@@ -80,7 +72,7 @@
   <div class="init">
     <div class="inBox">
       <div class="img"><img src="image/tb.jpg" width="132" alt="tt"></div>
-      <h1>Table Tennis</h1>
+      <p>Table Tennis</p>
       <ul>
         <li>I enjoy playing table tennis!</li>
         <li>My favorite table tennis player is Zhong Jike.</li>
@@ -102,7 +94,7 @@
   <div class="init">
     <div class="inBox">
       <div class="img"><img src="image/dreamweaver.jpg" height="100px" alt="Dw"></div>
-      <h1>DreamWeaver</h1>
+      <p>DreamWeaver</p>
       <ul>
         <li>Watching a good web is joyful</li>
         <li>It's my dream to code a wonderful web.</li>
@@ -112,23 +104,72 @@
 </div>
 
 
-
-
-
-<footer class="grid_12" >
-  <div class="box" >
-  <div id="thx" >
-  <h2>Nice to meet you :)  </h2>
-  <p>If you just feel good with this paghe and want to Cantact me,  </p>
-  <p>leave some words for me.&nbsp;I would be happy :)  </p>
-  <p>Best wishes&nbsp;&nbsp; </p>
-  <h2 align="right">Radian =)</h2>
+<div id="activity_tag" class="grid_2 tag">
+  <h1>Favorites</h1></div>
+<div id="activities" class="grid_12 classBox" >
+  <div class="act"><div>
+    <div class="inBox"><img src="../image/f_jay.jpg" width="100%" alt="Jay">Jay Chou. I love his song th</div>
   </div>
-  <div id="ctm">Contact Me!</div>
   </div>
-  
+    <div class="act"><div>
+    <div class="inBox"><img src="../image/f_jolin.jpg" width="100%" alt="Jolin"></div>
+    </div>
+  </div>
+    <div class="act"><div>
+    <div class="inBox"><img src="../image/f_jj.jpg" width="100%" alt="JJ"></div>
+  </div>
+  </div>
+    <div class="act"><div>
+    <div class="inBox"><img src="../image/f_gDragon 拷貝.jpg" width="100%" alt="GD"></div>
+  </div>
+  </div>
+    <div class="act">
+      <div>
+        <div class="inBox"><img src="../image/f_taylors.jpg" width="100%" alt="Taylors"></div>
+      </div>
+    </div>
+    <div class="act"><div>
+    <div class="inBox"><img src="../image/f_pirate.jpg" width="100%" alt="pirate"></div>
+  </div>
+  </div>
+  <div class="act"><div>
+    <div class="inBox"><img src="../image/f_lord.jpg" width="100%" alt="Lord Of Ring"></div>
+  </div>
+  </div>
+  <div class="act"><div>
+    <div class="inBox"><img src="../image/f_piano.jpg" width="100%" alt="Piano"></div>
+  </div>
+  </div>
+  <div class="act">
+    <div>
+      <div class="inBox"><img src="../image/f_inception.jpg" width="100%" alt="Inception"></div>
+    </div>
+  </div>
+  <div class="act"><div>
+    <div class="inBox"><img src="../image/f_onePiece.jpg" width="100%" alt="One Piece"></div>
+  </div>
+  </div>
+  <div class="act"><div>
+    <div class="inBox"><img src="../image/f_detector.jpg" width="100%" alt="Detector"></div>
+  </div>
+  </div>
+  <div class="act"><div>
+    <div class="inBox"><img src="../image/f_plice.jpg" width="100%" alt="police"></div>
+  </div>
+  </div>
+</div>
+
+
+
+<footer class="grid_12">
+  <h1>If You just feel good and want ot Cantact me :</h1>
+  <p>&nbsp;</p>
+  <h2>See you next Time
+  </h2>
+  <p>&nbsp;</p>
+  <h2>Radian =)</h2>
+  <p>&nbsp;</p>
 </footer>
-
 </div>
 </div>
 </body>
