--- a/assign2/myCV.html
+++ b/assign2/myCV.html
@@ -124,7 +124,7 @@
   <p>Best wishes&nbsp;&nbsp; </p>
   <h2 align="right">Radian =)</h2>
   </div>
-  <div id="ctm">Contact Me!</div>
+  <a href="myContact.html"><div id="ctm">Contact Me!</div></a>
   </div>
   
 </footer>
