--- a/assign2/myCV - 複製.html
+++ b/assign2/myCV - 複製.html
@@ -44,13 +44,13 @@
     </div></div>
   <div class="edu">
     <div class="inBox">
-    <img src="image/0.jpg" width="100%"  alt="eco">
+    <img src="image/eco.jpg" width="100%"  alt="eco">
       <h2>Economies</h2>
       <p>Economy is an interesting science. Here, the professors teach us how to make choice in the econemies and even in our daliy life.</p>
     </div></div>
   <div class="edu">
     <div class="inBox">
-    <img src="image/school.jpg" width="100%" alt="HSNU">
+    <img src="image/hsnu.jpg" width="100%" alt="HSNU">
 <h2>HSNU</h2>
 <p>This is my senior high school. HSNU is the symbol of youth. This is the most freedom and creatice school I've ever seen.</p>
     </div></div>
