--- a/assign2/myCV.html
+++ b/assign2/myCV.html
@@ -52,13 +52,13 @@
     </div></div>
   <div class="edu">
     <div class="inBox">
-    <img src="image/0.jpg" width="100%"  alt="eco">
+    <img src="image/eco.jpg" width="100%"  alt="eco">
       <h2>Economies</h2>
       <p>Economy is an interesting science. Here, the professors teach us how to make choice in the econemies and even in our daliy life.</p>
     </div></div>
   <div class="edu">
     <div class="inBox">
-    <img src="image/school.jpg" width="100%" alt="HSNU">
+    <img src="image/hsnu.jpg" width="100%" alt="HSNU">
 <h2>HSNU</h2>
 <p>This is my senior high school. HSNU is the symbol of youth. This is the most freedom and creatice school I've ever seen. I had so much fun here.</p>
     </div></div>
@@ -79,7 +79,7 @@
   </div>
   <div class="init">
     <div class="inBox">
-      <div class="img"><img src="image/tb.jpg" width="132" alt="tt"></div>
+      <div class="img"><img src="image/tb.jpg" height="100px"  alt="tt"></div>
       <h1>Table Tennis</h1>
       <ul>
         <li>I enjoy playing table tennis!</li>
