--- a/assign2/myCV.html
+++ b/assign2/myCV.html
@@ -40,25 +40,25 @@
 <div id="education" class="grid_12 classBox" >
   <div class="edu">
     <div class="inBox">
-      <img src="image/edu.jpg" width="100%" alt="Edu">
+      <img src="image/edu.jpg" width="196" alt="Edu">
 	<h2>Education</h2>
 	<p>This is my major. Education dpartment is very energetic. At here, I am learning how we were educated and how we should teach others.</p>
     </div></div>
   <div class="edu">
     <div class="inBox">
-      <img src="image/dct.jpg" width="100%" alt="dct">
+      <img src="image/dct.jpg" width="196" alt="dct">
       <h2>Digital Content</h2>
       <p>This is my double major. Digital content is very interesting. And I am enjoyed being studying here. At here, I learn many thing i've never known before.</p>
     </div></div>
   <div class="edu">
     <div class="inBox">
-    <img src="image/eco.jpg" width="100%"  alt="eco">
+    <img src="image/eco.jpg" width="196"  alt="eco">
       <h2>Economies</h2>
       <p>Economy is an interesting science. Here, the professors teach us how to make choice in the econemies and even in our daliy life.</p>
     </div></div>
   <div class="edu">
     <div class="inBox">
-    <img src="image/hsnu.jpg" width="100%" alt="HSNU">
+    <img src="image/hsnu.jpg" width="196" alt="HSNU">
 <h2>HSNU</h2>
 <p>This is my senior high school. HSNU is the symbol of youth. This is the most freedom and creatice school I've ever seen. I had so much fun here.</p>
     </div></div>
