--- a/assign2/myContact.html
+++ b/assign2/myContact.html
@@ -15,8 +15,7 @@
 <div class="tag grid_2"><h1>Contact Me</h1></div>
 <div id="contactBox" class="grid_12 classBox" >
 
-<form action="https://docs.google.com/spreadsheet/formResponse?formkey=dDhFdFBITDc2X3FaUGNPaGRWb29mNlE6MQ&ifq" method="POST">
-
+<form action="https://docs.google.com/spreadsheet/formResponse?formkey=dDhFdFBITDc2X3FaUGNPaGRWb29mNlE6MQ&amp;ifq" method="POST">
 <input type="hidden" name="entry.0.single" value="100102035">
 <div class="cnt"><div class="inBox">
 <h1>Gender</h1>
@@ -56,7 +55,7 @@
 <textarea name="entry.5.single" cols="15" rows="5"></textarea><br>
 </div></div>
 <p>
-  <div id="cnt_sub"><a href="myCV.html"><input type="button" value="Go Back"></a><input type="submit" name="button" id="button" value="Submit"></div>
+  <div id="cnt_sub"><a href="myCV.html"><input type="button" value="Go Back"></a><input type="submit" name="submit"  value="Submit"></div>
 </p>
 <p>&nbsp;</p>
 </form>
