add fonts  ver 2.0

--- a/assign2/myCV.html
+++ b/assign2/myCV.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
+<link href='http://fonts.googleapis.com/css?family=Inder' rel='stylesheet' type='text/css'>
+
 <link rel="stylesheet" type="text/css" href="css.css" >
 <link rel="stylesheet" type="text/css" href="grid_css/960_12_col.css">
 <title>Radian Smile</title>
@@ -73,7 +75,7 @@
       </div>
       <h1>VoleyBall</h1>
       <ul>
-        <li>I love ths feeling of team work in the ball game. And rather than basketball, voleyball is more peaceful&nbsp;and skillful. So I enjoy playing the air in&nbsp;the voleyball game.</li>
+        <li>I love ths feeling of team work in the ball game. And rather than basketball, voleyball is more peaceful&nbsp;and skillful.  </li>
       </ul>
     </div>
   </div>
@@ -83,8 +85,7 @@
       <h1>Table Tennis</h1>
       <ul>
         <li>I enjoy playing table tennis!</li>
-        <li>My favorite table tennis player is Zhong Jike.</li>
-        <li>I love watching ping pong games on youtube.</li>
+        <li>My favorite table tennis player is Zhong Jike.I love watching ping pong games on youtube.</li>
       </ul>
     </div></div>
   <div class="init">
@@ -93,9 +94,9 @@
         <div class="img"><img src="image/flash.jpg" height="100px" alt="flash"></div>
         <h1>Flash</h1>
         <ul>
-          <li>Coding the flash code is challenging.</li>
+          <li>Coding the flash is challenging.</li>
           <li>It's is happy to see the code run smoothly.</li>
-          <li>But a good work needs good graphics!!</li>
+          <li>But I am not good at drawing.</li>
         </ul>
       </div>
     </div></div>
@@ -119,9 +120,8 @@
   <div class="box" >
   <div id="thx" >
   <h2>Nice to meet you :)  </h2>
-  <p>If you just feel good with this paghe and want to Cantact me,  </p>
-  <p>leave some words for me.&nbsp;I would be happy :)  </p>
-  <p>Best wishes&nbsp;&nbsp; </p>
+  <p>If you just feel good with this paghe and want to Cantact me,  leave some words for me.&nbsp;I would be happy :)  </p>
+  <p class="r">Best wishes&nbsp;&nbsp; </p>
   <h2 align="right">Radian =)</h2>
   </div>
   <a href="myContact.html"><div id="ctm">Contact Me!</div></a>
