--- a/assign2/myContact.html
+++ b/assign2/myContact.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
+<link href='http://fonts.googleapis.com/css?family=Inder' rel='stylesheet' type='text/css'>
+
 <link href="css.css" rel="stylesheet" type="text/css" >
 <link href="grid_css/960_12_col.css" rel="stylesheet" type="text/css">
 <title>Contact me</title>
@@ -19,18 +21,26 @@
 <input type="hidden" name="entry.0.single" value="100102035">
 <div class="cnt"><div class="inBox">
 <h1>Gender</h1>
-<input type="radio" name="entry.1.group" value="Boy">Boy<br>
-<input type="radio" name="entry.1.group" value="Girl">Girl<br>
-<br></div></div>
+<p>
+  <input type="radio" name="entry.1.group" value="Boy">
+  Boy<br>
+  <input type="radio" name="entry.1.group" value="Girl"> 
+  Girl<br>
+  <br>
+</p>
+</div></div>
 
 <div class="cnt"><div class="inBox">
   <h1>Favorite Foods</h1>
   <p>
     <input type="checkbox" name="entry.2.group" value="Apple">
     Apple<br>
-  <input type="checkbox" name="entry.2.group" value="Banana">Banana<br>
-  <input type="checkbox" name="entry.2.group" value="Lemon">Lemon<br>
-  <input type="checkbox" name="entry.2.group" value="Watermelon">Watermelom</p>
+  <input type="checkbox" name="entry.2.group" value="Banana"> 
+  Banana<br>
+  <input type="checkbox" name="entry.2.group" value="Lemon"> 
+  Lemon<br>
+  <input type="checkbox" name="entry.2.group" value="Watermelon"> 
+  Watermelom</p>
   <p><br>
     <br>
   </p>
@@ -38,21 +48,31 @@
 
 <div class="cnt"><div class="inBox">
   <h1>Relationship</h1>
-<select name="entry.3.single" id="entry.3.single">
-  <option value="Single" selected>Single</option>
-  <option value="Dating">Dating</option>
-  <option value="Married">Married</option>
-  <option value="Hard to explain">Hard to explain</option>
-</select><br></div></div>
+  <p>&nbsp;</p>
+  <p>
+  <select name="entry.3.single" id="entry.3.single">
+    <option value="Single" selected>Single</option>
+    <option value="Dating">Dating</option>
+    <option value="Married">Married</option>
+    <option value="Hard to explain">Hard to explain</option>
+  </select>
+  <br>
+  </p>
+</div></div>
 
 <div class="cnt"><div class="inBox">
   <h1>Email</h1>
-<input name="entry.4.single" type="text" size="18" ><br>
-<br></div></div>
+  <p>&nbsp;    </p>
+  <p>
+    <input id="mail" name="entry.4.single" type="text" size="16" >
+    <br>
+    <br>
+  </p>
+</div></div>
 
 <div class="cnt"><div class="inBox">
   <h1>Comments</h1>
-<textarea name="entry.5.single" cols="15" rows="5"></textarea><br>
+<textarea name="entry.5.single" cols="15" rows="8"></textarea><br>
 </div></div>
 <p>
   <div id="cnt_sub"><a href="myCV.html"><input type="button" value="Go Back"></a><input type="submit" name="submit"  value="Submit"></div>
