--- a/assign2/myCV.html
+++ b/assign2/myCV.html
@@ -17,7 +17,8 @@
 <div id="banner" class="grid_12"> 
 
 <div id="hd_photo"><img src="image/hd_photo.jpg" width="199" height="199" alt="my big head"></div>
-	<h1> Radian Smile <nav id="bookmarks">Photo | About | Interest | Activities| Love Camp </nav> </h1>
+	<nav id="bookmarks">Photo | About | Interest | Activities| Love Camp </nav>
+    <h1> Radian Smile  </h1>
    	<dl>
     <dt>E-mail Address</dt><dd>craziestdavid@gmail.com</dd>
     <dt>Part Time Work</dt><dd>Nccu Computer Center Assistant</dd>
