--- a/assign2/myCV.html
+++ b/assign2/myCV.html
@@ -17,7 +17,7 @@
 <div id="banner" class="grid_12"> 
 
 <div id="hd_photo"><img src="image/hd_photo.jpg" width="199" height="199" alt="my big head"></div>
-	<nav id="bookmarks">Photo | About | Interest | Activities| Love Camp </nav>
+	<nav id="bookmarks"><a href="#">Photo</a> | <a href="#">About</a> | <a href="#">Interest</a> | <a href="#">Activities</a> | <a href="#">Love Camp</a></nav>
     <h1> Radian Smile  </h1>
    	<dl>
     <dt>E-mail Address</dt><dd>craziestdavid@gmail.com</dd>
@@ -29,11 +29,11 @@
     <div id="cnt">
      <ul>
      <a href="http://www.facebook.com/D.craziest"><li class="fb"></li></a>
-     <li class="gp"></li>
-     <li class="ti"></li>
-     <li class="tm"></li>
+     <a href="https://plus.google.com/116270984844989991561/posts"><li class="gp"></li></a>
+     <a href="https://twitter.com/RadianSmile"><li class="ti"></li></a>
+     <a href="http://radiansmile.tumblr.com/"><li class="tm"></li></a>
      </ul>
-      </div>
+    </div>
 </div>
 
 
