--- a/assign2/myContact.html
+++ b/assign2/myContact.html
@@ -22,10 +22,10 @@
 <div class="cnt"><div class="inBox">
 <h1>Gender</h1>
 <p>
-  <input type="radio" name="entry.1.group" value="Boy">
-  Boy<br>
-  <input type="radio" name="entry.1.group" value="Girl"> 
-  Girl<br>
+  <input type="radio" name="entry.1.group" value="Boy" id="gender_1">
+  <label for="gender_1">Boy</label><br>
+  <input type="radio" name="entry.1.group" value="Girl" id="gender_2"> 
+  <label for="gender_2">Girl</label><br>
   <br>
 </p>
 </div></div>
@@ -33,14 +33,14 @@
 <div class="cnt"><div class="inBox">
   <h1>Favorite Foods</h1>
   <p>
-    <input type="checkbox" name="entry.2.group" value="Apple">
-    Apple<br>
-  <input type="checkbox" name="entry.2.group" value="Banana"> 
-  Banana<br>
-  <input type="checkbox" name="entry.2.group" value="Lemon"> 
-  Lemon<br>
-  <input type="checkbox" name="entry.2.group" value="Watermelon"> 
-  Watermelom</p>
+    <input type="checkbox" name="entry.2.group" value="Apple" id="food_1">
+    <label for="food_1">Apple</label><br>
+  <input type="checkbox" name="entry.2.group" value="Banana"  id="food_2"> 
+  <label for="food_2">Banana</label><br>
+  <input type="checkbox" name="entry.2.group" value="Lemon" id="food_3"> 
+  <label for="food_3">Lemon</label><br>
+  <input type="checkbox" name="entry.2.group" value="Watermelon" id="food_4"> 
+  <label for="food_4">Watermelom</label></p>
   <p><br>
     <br>
   </p>
