--- a/assign2/myCV.html
+++ b/assign2/myCV.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-<div class="container_12" >
+
 <header>
 </header>
 
-<div id="banner" class="grid_12"> 
+<div id="banner" class="container_12"> 
 
 <div id="hd_photo"><img src="image/hd_photo.jpg" width="199" height="199" alt="my big head"></div>
 	<nav id="bookmarks"><a href="#">Photo</a> | <a href="#">About</a> | <a href="#">Interest</a> | <a href="#">Activities</a> | <a href="#">Love Camp</a></nav>
@@ -39,16 +39,16 @@
 
 
 
-<div id="edu_tag" class="grid_2 tag"><h1>Education</h1> </div>
-<div id="education" class="grid_12 classBox" >
+<div class="container_12"><div id="edu_tag" class="grid_2 alpha tag"><h1>Education</h1> </div></div>
+<div id="education" class="container_12 classBox" >
   <div class="edu">
-    <div class="inBox">
+    <div class="inBox ">
       <img src="image/edu.jpg" width="196" alt="Edu">
 	<h2>Education</h2>
 	<p>This is my major. Education dpartment is very energetic. At here, I am learning how we were educated and how we should teach others.</p>
     </div></div>
   <div class="edu">
-    <div class="inBox">
+    <div class="inBox ">
       <img src="image/dct.jpg" width="196" alt="dct">
       <h2>Digital Content</h2>
       <p>This is my double major. Digital content is very interesting. And I am enjoyed being studying here. At here, I learn many thing i've never known before.</p>
@@ -67,43 +67,48 @@
     </div></div>
 </div>
 
-<div id="interest_tag" class="grid_2 tag"><h1>Interests</h1></div>
-<div id="interests" class="grid_12 classBox" >
-  <div class="init">
+<div class="container_12" ><div id="interest_tag" class="grid_2 tag alpha"><h1>Interests</h1></div></div>
+<div id="interests" class="container_12 classBox" >
+  <div class="init ">
     <div class="inBox">
-      <div class="img">
-        <img src="image/biking.jpg" height="100px" alt="biking">
-      </div>
+      <div class="img"><img src="image/biking.jpg" height="100px" alt="biking"></div>
+      <div class="txt">
       <h1>VoleyBall</h1>
       <ul>
         <li>I love ths feeling of team work in the ball game. And rather than basketball, voleyball is more peaceful&nbsp;and skillful.  </li>
       </ul>
     </div>
+    </div>
   </div>
-  <div class="init">
+  <div class="init ">
     <div class="inBox">
       <div class="img"><img src="image/tb.jpg" height="100px"  alt="tt"></div>
+      <div class="txt">
       <h1>Table Tennis</h1>
       <ul>
         <li>I enjoy playing table tennis!</li>
         <li>My favorite table tennis player is Zhong Jike.I love watching ping pong games on youtube.</li>
       </ul>
+      </div>
     </div></div>
   <div class="init">
     <div>
       <div class="inBox">
         <div class="img"><img src="image/flash.jpg" height="100px" alt="flash"></div>
+        <div class="txt">
         <h1>Flash</h1>
         <ul>
           <li>Coding the flash is challenging.</li>
           <li>It's is happy to see the code run smoothly.</li>
           <li>But I am not good at drawing.</li>
         </ul>
+        </div>
       </div>
     </div></div>
-  <div class="init">
+  <div class="init ">
     <div class="inBox">
       <div class="img"><img src="image/dreamweaver.jpg" height="100px" alt="Dw"></div>
+      <div class="txt">
       <h1>DreamWeaver</h1>
       <ul>
         <li>Watching a good web is joyful</li>
@@ -112,12 +117,13 @@
       </ul>
     </div></div>
 </div>
+</div>
 
 
 
 
 
-<footer class="grid_12" >
+<footer class="container_12">
   <div class="box" >
   <div id="thx" >
   <h2>Nice to meet you :)  </h2>
@@ -128,9 +134,13 @@
   <a href="myContact.html"><div id="ctm">Contact Me!</div></a>
   </div>
   
+  
 </footer>
 
+<div class="container_12">
+  <p align="center">Web Programming. Copy Right 2013. Radian Smile.</p>
+  </div>
 </div>
-</div>
+
 </body>
 </html>
