--- a/index.html
+++ b/index.html
@@ -1,24 +1,52 @@
+<!doctype html>
 <html>
 <head>
+<link href="960.css" rel="stylesheet" type="text/css">
+<link href="css.css" rel="stylesheet" type="text/css">
+<meta charset="utf-8">
+<title>WebPro</title>
+
 <style>
-h1 {
-color:blue;
+
+.btn{
+	border-radius:5px;
+	box-shadow:	 3px 4px 10px 1px  #0066CC;
+	height:40px;
+	width:100px;
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(79,133,187,1)), color-stop(100%,rgba(49,85,89,1))); /* Chrome,Safari4+ */
+
 }
-p{
-color:gray ;
+.btn:hover {
+	 3px 4px 10px 8px rgba(122, 100, 0, 5);
+	cursor:pointer;
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(53,84,124,.8)), color-stop(100%,rgba(79,133,187,1)));
+		border-radius:5px;
+	box-shadow:5px 5px 20px 3px #CC6699;
+	height:40px;
+	width:100px;
 }
+	
 </style>
 </head>
 
 <body>
-<h1>
 
-Good Morning</h1>
 
-<p>
-dasfhajklsdhfkj dasfhajklsdhfkj dasfhajklsdhfkj dasfhajklsdhfkj dasfhajklsdhfkj dasfhajklsdhfkj dasfhajklsdhfkj dasfhajklsdhfkj dasfhajklsdhfkj dasfhajklsdhfkj dasfhajklsdhfkj dasfhajklsdhfkj 
+<header>
+<div id="banner" class="container_12"></div>
+<nav class="container_12 "><div class="btn"> </div></nav>
+</header>
 
-</p>
+
+
+<div id="content"></div>
+
+
+
+
+
+<footer></footer>
+
 
 </body>
 </html>
