add page-in out

--- a/assign2/myCV.html
+++ b/assign2/myCV.html
@@ -1,7 +1,10 @@
 <!doctype html>
 <html>
 <head>
+
 <meta charset="utf-8">
+<meta http-equiv="Page-Exit" content="revealTrans(Duration=3.0,Transition=20) ">
+<meta http-equiv="Page-Enter" content="revealTrans(Duration=1.0,Transition=4)">
 <link href='http://fonts.googleapis.com/css?family=Inder' rel='stylesheet' type='text/css'>
 
 <link rel="stylesheet" type="text/css" href="css.css" >
