--- a/assign2/myContact.html
+++ b/assign2/myContact.html
@@ -64,7 +64,7 @@
   <h1>Email</h1>
   <p>&nbsp;    </p>
   <p>
-    <input id="mail" name="entry.4.single" type="text" size="16" >
+    <input id="mail" name="entry.4.single" type="email" size="16" required>
     <br>
     <br>
   </p>
