--- a/assign2/myCV.html
+++ b/assign2/myCV.html
@@ -134,7 +134,7 @@
   <p class="r">Best wishes&nbsp;&nbsp; </p>
   <h2 align="right">Radian =)</h2>
   </div>
-  <a href="myContact.html"><div id="ctm">Contact Me!</div></a>
+  <a href="myContact.html"><div id="ctm"><h1>Contact Me!</h1></div></a>
   </div>
   
   
