--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
           <h2>Assign2</h2>
           <p>This assign require us to make our profile page! Just take a look :)</p>
           <div>
-            <a class="btn" href="http://radiansmile.github.io/web/assign2/myCV.html">My Profile</a>
+            <a class="btn btn-primary" href="http://radiansmile.github.io/web/assign2/myCV.html">My Profile</a>
           </div>
         </div>
         <div class="span4 box1">
           <h2>Cat and Mouse</h2>
           <p>This assign is made by flash! Try the game! It's very exciting!</p>
           <div>
-            <a class="btn" href="http://nccu.edu.tw/100102035/CatAndMouse.swf">Cat And Mosue</a>
+            <a class="btn btn-primary" href="http://nccu.edu.tw/100102035/CatAndMouse.swf">Cat And Mosue</a>
           </div>
         </div>
         <div class="span4 box1">
           <h2>Some of my Works</h2>
           <p>I want to join a lab. Thus, here is a page prepared for the entry.</p>
           <div>
-            <a class="btn" href="http://nccu.edu.tw/100102035/100102035_LivingLab.html">Test</a>
+            <a class="btn btn-primary" href="http://nccu.edu.tw/100102035/100102035_LivingLab.html">Test</a>
           </div>
         </div>
       </div>
