--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
       <div class="row">
         <div class="span4 box1">
-          <h2>Assign2</h2>
+          <h2>Profile</h2>
           <p>This assign require us to make our profile page! Just take a look :)</p>
           <div>
             <a class="btn btn-primary" href="http://radiansmile.github.io/web/assign2/myCV.html">My Profile</a>
