--- a/project/main.html
+++ b/project/main.html
@@ -3,25 +3,25 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>無標題文件</title>
-<script src="Scripts/swfobject_modified.js" type="text/javascript"></script>
+<script src="../Scripts/swfobject_modified.js" type="text/javascript"></script>
 </head>
 
 <body>
-<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="600" height="450" id="FlashID" title="main">
-  <param name="movie" value="首頁 main flash.swf" />
+<object id="FlashID" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="400" height="300">
+  <param name="movie" value="Snow.swf" />
   <param name="quality" value="high" />
   <param name="wmode" value="opaque" />
-  <param name="swfversion" value="15.0.0.0" />
+  <param name="swfversion" value="11.0.0.0" />
   <!-- 此 param 標籤會提示使用 Flash Player 6.0 r65 和更新版本的使用者下載最新版本的 Flash Player。如果您不想讓使用者看到這項提示，請將其刪除。 -->
-  <param name="expressinstall" value="Scripts/expressInstall.swf" />
+  <param name="expressinstall" value="../Scripts/expressInstall.swf" />
   <!-- 下一個物件標籤僅供非 IE 瀏覽器使用。因此，請使用 IECC 將其自 IE 隱藏。 -->
   <!--[if !IE]>-->
-  <object type="application/x-shockwave-flash" data="首頁 main flash.swf" width="600" height="450">
+  <object type="application/x-shockwave-flash" data="Snow.swf" width="400" height="300">
     <!--<![endif]-->
     <param name="quality" value="high" />
     <param name="wmode" value="opaque" />
-    <param name="swfversion" value="15.0.0.0" />
-    <param name="expressinstall" value="Scripts/expressInstall.swf" />
+    <param name="swfversion" value="11.0.0.0" />
+    <param name="expressinstall" value="../Scripts/expressInstall.swf" />
     <!-- 瀏覽器會為使用 Flash Player 6.0 和更早版本的使用者顯示下列替代內容。 -->
     <div>
       <h4>這個頁面上的內容需要較新版本的 Adobe Flash Player。</h4>
