--- a/assign4_JSON/index.html
+++ b/assign4_JSON/index.html
@@ -18,23 +18,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Weather Casting</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li class="divider"></li>
-                  <li class="nav-header">Nav header</li>
-                  <li><a href="#">Separated link</a></li>
-                  <li><a href="#">One more separated link</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div><!--/.nav-collapse -->
+          <a class="brand" href="#">Weather Casting</a><!--/.nav-collapse -->
         </div>
       </div>
     </div>
@@ -44,6 +28,7 @@
     <div class="span6">
       <!--div class="box"-->
         <div id="box1" class="box" > 
+        <div class="nav-collapse collapse"></div>
         <h2>Function 1: Search by City</h2>
         <div id="locations" style="float:left"></div>
         </div>
@@ -64,7 +49,7 @@
     <div class="span6"> 
       <div class="box" style="position:relative">
         <div id="weather"></div>
-        <h2>Conditions</h2>
+        <h2 id ="theTitle">Conditions</h2>
         <div id="description">
           <h4>Title</h4>
         <div id="title"></div>
