--- a/index.html
+++ b/index.html
@@ -69,10 +69,19 @@
       <div class="row">
         <div class="span4 box1">
           <h2>JSON</h2>
-          <p>A nece js I have learned </p>
+          <p>A nice JS I have learned. Let's see a weather Casting! </p>
           <div>
-            <a class="btn btn-primary" href="assign4/JSON/index.html">JSON</a>
+            <a class="btn btn-primary" href="assign4_JSON/index.html">JSON</a>
           </div>
+        </div>
+        <div class="span4 box1">
+          <h2>Green Sock</h2>
+          <p>Do you want to see motion on my html5? Just click and you will see!! </p>
+          <div>
+            <a class="btn btn-primary" href="#">TweenMax</a>
+          </div>
+        </div>
+
       </div>
     </div>
     <script src="http://code.jquery.com/jquery.js"></script>
