--- a/assign4_JSON/index.html
+++ b/assign4_JSON/index.html
@@ -18,7 +18,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Weather Casting</a><!--/.nav-collapse -->
+          <a class="brand" href="#">100102035 Assign4 JSON</a><!--/.nav-collapse -->
         </div>
       </div>
     </div>
